# viroc

./: .gitignore  README.md  compose.yaml  justfile  pyproject.toml
deploy/: api.Dockerfile  triton.Dockerfile
deploy/models/yolo/: config.pbtxt
docs/: ai_disclosure.md  main.typ  viroc.drawio
results/: benchmark_results.csv
scripts/: analysis.py  benchmark.py  export_yolo.py  notebook.ipynb
src/viroc/: __init__.py  __main__.py  app.py  dataset.py  decode_ccpd_labels.py  imaging.py  models.py
test/: test_notebook.ipynb
