[project]
name = "viroc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Noah Gardner", email = "ngngardner@gmail.com" }]
requires-python = "~=3.12.0"
dependencies = [
    "accelerate>=1.8.1",
    "fastapi[standard]>=0.115.14",
    "huggingface-hub>=0.33.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "onnx<1.18.0",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.58",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "tritonclient>=2.59.0",
    "ultralytics>=8.3.161",
    "uvicorn>=0.35.0",
    "yolov5>=7.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.12.1",
    "rust-just>=1.41.0",
]
